test_case/rust-lang_rust/77743_706269257.rs
rust
/// [true] //~ ERROR ambiguous
pub mod true {}
